@@ -1137,7 +1137,7 @@ Points
 
     <widget>
       <class>GtkNotebook</class>
-      <name>notebook2</name>
+      <name>find_notebook</name>
       <can_focus>True</can_focus>
       <show_tabs>True</show_tabs>
       <show_border>True</show_border>
